--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+}
+
+.main-module {
+    width: 1440px;
+}
+
+.eventButton,
+.resetButton {
+    color: white;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 700;
+    background-color: #E4C1AE;
+    border: none;
+    border-radius: 32px;
+    padding: 16px 40px;
+}
+
+.eventButton:hover,
+.resetButton:hover {
+    cursor: pointer;
+}
+
+.resetButton {
+    visibility: hidden;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    background: rgba(18, 18, 18, 0.5);
+}
+
+.content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background-color: #fff;
+    width: 920px;
+    height: 210px;
+    z-index: 2;
+    padding: 50px;
+    display: none;
+}
+
+.closeButton {
+    position: absolute;
+    right: 46px;
+    top: 30px;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.popup.active {
+    display: block;
+}
+
+.content.active {
+    transition: all 800 ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
 }
