--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,115 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 @import "_colors.scss";
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import "_reset.scss";
+@import "_buttons.scss";
+@import "_module.scss";
+@import "_popup.scss";
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: $bg;
     color: $dark;
-}
-
-.main-module {
-    background-color: #fff;
-}
-
-.main-module--img-hero {
-    position: absolute;
-    top: 96px;
-    left: 230px;
-    width: 505px;
-    height: 330px;
-}
-
-.main-module--content {
-    position: absolute;
-    left: 830px;
-    top: 136px;
-    width: 380px;
-    height: 250px;
-
-}
-
-.main-module--content h1 {
-    font-size: 42px;
-    font-weight: 700;
-    margin-bottom: 2rem;
-}
-
-.main-module--content p {
     font-size: 16px;
-    line-height: 24px;
-    font-weight: 300;
-    margin-bottom: 3rem;
 }
 
-.eventButton,
-.resetButton {
-    color: white;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 700;
-    background-color: $primary;
-    border: none;
-    border-radius: 32px;
-    padding: 16px 40px;
+@media (max-width: 1280px) {
+    .main-module {
+        top: 8vh;
+    }
 }
 
-.eventButton:hover,
-.resetButton:hover {
-    cursor: pointer;
+//Telefon
+
+@media (max-width: 1024px) {
+    .main-module {
+        top: 6vh;
+    }
 }
 
-.resetButton {
-    visibility: hidden;
-}
-
-.overlay {
-    position: fixed;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(18, 18, 18, .5);
-    pointer-events: none;
-    transition: all 800 ease-in-out;
-}
-
-.overlay.active {
-    opacity: 1;
-    pointer-events: all;
-}
-
-.content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    background-color: #fff;
-    width: 920px;
-    height: 210px;
-    z-index: 3;
-    padding: 50px;
-}
-
-.closeButton {
-    cursor: pointer;
-    position: absolute;
-    right: 46px;
-    top: 30px;
-    font-size: 24px;
-    font-weight: 800;
-}
-
-.popup.active {
-    display: block;
-}
-
-.content.active {
-    transform: translate(-50%, -50%) scale(1);
+@media (max-width: 414px) {
+    // NOWY KOD CSS
 }
