--- a/src/scss/_module.scss
+++ b/src/scss/_module.scss
@@ -1,6 +1,6 @@
 .main-module {
     background-color: $bg;
-    width: 100%vw;
+    width: 1440px;
     position: relative;
     top: 10vh;
     left: 50%;
@@ -11,9 +11,34 @@
     justify-content: center;
 
 
-    img {
+    .image {
         width: 505px;
         height: 330px;
+
+        @media (max-width: 1086px) {
+            width: 450px;
+            height: 300px;
+        }
+
+        @media (max-width: 986px) {
+            width: 600px;
+            height: 400px;
+        }
+
+        @media (max-width: 680px) {
+            width: 450px;
+            height: 300px;
+        }
+
+        @media (max-width: 512px) {
+            width: 300px;
+            height: 200px;
+        }
+
+        @media (max-width: 360px) {
+            width: 225px;
+            height: 150px;
+        }
     }
 
     .content {
@@ -27,6 +52,15 @@
             font-size: 42px;
             line-height: 50px;
             font-weight: 700;
+
+            @media (max-width: 986px) {
+                font-size: $mobile-title;
+                line-height: 120%;
+            }
+
+            @media (max-width: 512px) {
+                margin-top: 0;
+            }
         }
 
         .copy {
@@ -35,6 +69,30 @@
             margin-top: 24px;
             display: flex;
             align-items: center;
+
+            @media (max-width: 986px) {
+                font-size: $mobile-copy;
+            }
         }
+
+        @media (max-width: 986px) {
+            margin-bottom: 100px;
+        }
+
+        @media (max-width: 512px) {
+            width: 80vw;
+        }
+    }
+
+    @media (max-width: 1440px) {
+        width: 100vw;
+    }
+
+    @media (max-width: 986px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 35px;
+        margin-bottom: 50px;
+        top: 6vh;
     }
 }
