--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -19,10 +19,34 @@
     .title {
         font-size: 42px;
         line-height: 50px;
+
+        @media (max-width: 986px) {
+            font-size: $mobile-title;
+            line-height: 120%;
+        }
     }
 
     .copy {
         line-height: 24px;
+
+        @media (max-width: 986px) {
+            font-size: $mobile-copy;
+        }
+    }
+
+    @media (max-width: 986px) {
+        justify-content: normal;
+        height: 240px;
+        padding: 50px;
+    }
+
+    @media (max-width: 680px) {
+        width: 75%;
+    }
+
+    @media (max-width: 360px) {
+        height: 260px;
+        padding: 40px;
     }
 }
 
@@ -35,8 +59,8 @@
     opacity: 0;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(18, 18, 18, .5);
     pointer-events: none;
 
