Fix hover btn bug

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -27,6 +27,10 @@
         left: 50%;
         transition: none;
         transform: translateX(-50%);
+
+        &:hover {
+            transform: translateX(-50%) scale(1);
+        }
     }
 }
 
